--- a/css/main-prog.css
+++ b/css/main-prog.css
@@ -228,13 +228,14 @@ nav{
 }
 /* END OF PROGRAM PO */
 
+
 /* START OF CORE COURSES */
-.core-courses h3{
+.core-courses h3 {
     font-weight: bold;
     padding-bottom: 1rem;
 }
 
-.course-wrapper{
+.course-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -243,8 +244,8 @@ nav{
 .container {
     display: flex;
     flex-direction: column;
-    height: 500px;
-    max-width: 500px;
+    max-width: 100%;
+    height: auto; /* Remove the fixed height to allow content to expand vertically */
 }
 
 .panel {
@@ -254,16 +255,16 @@ nav{
     background: var(--5th-color);
     height: 48px;
     margin: 10px;
-    box-shadow: -5px -5px 15px rgb(255, 255, 255),
-                5px 5px 15px rgba(0, 0, 0, 0.104);
+    box-shadow: -5px -5px 15px rgb(255, 255, 255), 5px 5px 15px rgba(0, 0, 0, 0.104);
     cursor: pointer;
-    transition: flex 0.5s linear;
+    transition: height 0.5s ease-in-out;
     overflow: hidden;
 }
 
 .panel.active {
-    flex-grow: 5;
+    height: 300px;
     border: 1px solid var(--1st-color);
+    transition: height 0.5s ease-in-out;
 }
 
 .course-title {
@@ -293,7 +294,6 @@ nav{
     opacity: 1;
     transition: opacity 0.2s ease-in 0.3s;
 }
-/* END OF CORE COURSES */
 
 /* START OF CAREER OCCUPATIONS */
 .careers h3{
@@ -308,6 +308,7 @@ nav{
 }
 .careers ul li{
     margin: 15px 0;
+    text-align: left;
 }
 /* END OF CAREER OCCUPATIONS */
 
@@ -464,6 +465,18 @@ nav{
 }
 
 /* START OF RESPONSIVE DESIGN */
+@media (min-width: 992px) {
+    .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .panel {
+        flex-basis: calc(50% - 20px); /* Adjust the width as needed */
+    }
+}
+
 @media (max-width: 991px) {
     /* START OF PROGRAM BANNER */
     .program-title{
@@ -495,7 +508,7 @@ nav{
 
     /* START OF NAVBAR */
     .navbar, .container-fluid{
-        width: calc(100vw - 77px) !important;
+        width: calc(100vw - 60px) !important;
     }
     button.navbar-toggler{
         background-color: #a2cfffce;
@@ -521,6 +534,9 @@ nav{
 
 
     /* CORE COURSES */
+    .container{
+        height: 100vh !important;
+    }
     .course-title strong {
         font-size: calc(80vw / 3750 * 100);
         text-align: left;
