--- a/css/faculty-dir.css
+++ b/css/faculty-dir.css
@@ -13,14 +13,13 @@
 .bottom-profiles{
     margin-top: 50px;
 }
-
 .single_advisor_profile {
     position: relative;
     margin-bottom: 50px;
     -webkit-transition-duration: 500ms;
     transition-duration: 500ms;
     z-index: 1;
-    border-radius: 15px;
+    border-radius: 5px;
     -webkit-box-shadow: 0 0.25rem 1rem 0 rgba(47, 91, 234, 0.125);
     box-shadow: 0 0.25rem 1rem 0 rgba(47, 91, 234, 0.125);
 }
@@ -77,6 +76,7 @@
     position: relative;
     z-index: 1;
     padding: 30px;
+    height: 130px;
     text-align: right;
     -webkit-transition-duration: 500ms;
     transition-duration: 500ms;
